# postgres-extension

./: Cargo.toml  README.md  command_ref.sh  commands_reference.txt  postgres_spice.control  sql_ref.sql
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs
